        PR tree-opt/18403         PR tree-opt/18505         * tree-vectorizer.c (vect_create_data_ref_ptr): Use         lang_hooks.types.type_for_size instead of integer_type_node for the         type of ptr_update.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@91081 138bc75d-0d04-0410-961f-82ee72b054a4